[package]
name = "micrors"
description = "Library to get started with microcontroller development."
version = "0.0.0"
authors = ["wilypomegranate <wilypomegranate@users.noreply.github.com>"]
homepage = "https://github.com/wilypomegranate/micrors"
edition = "2018"
license = "MPL-2.0"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["rt", "stm32f103", "medium"]